<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/large_padding"
    tools:context=".feature.data.changePassword.ChangePasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password_text"
            android:textColor="@color/hint"
            android:textSize="@dimen/medium_text" />

        <EditText
            android:id="@+id/et_enter_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            android:background="@drawable/edit_text"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:padding="@dimen/large_padding"
            android:textSize="@dimen/medium_text" />

        <EditText
            android:id="@+id/et_enter_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:background="@drawable/edit_text"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="@dimen/large_padding"
            android:textSize="@dimen/medium_text" />

        <EditText
            android:id="@+id/et_enter_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:background="@drawable/edit_text"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/large_padding"
            android:textSize="@dimen/medium_text" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_button"
        android:text="@string/send_code"
        android:layout_gravity="bottom"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text" />

</FrameLayout>