<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dark_button"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:text="@string/bill_option"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_add_bill"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/add_bill"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:src="@drawable/dash_line"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"/>

        <TextView
            android:id="@+id/tv_delivery"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/delivery_for_customer"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:src="@drawable/dash_line"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/on_way_to_store"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sc_on_way"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/green_button"
                android:theme="@style/SwitchThemeOverlay"
                android:layout_alignParentBottom="true"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/on_way_to_customer"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="@drawable/blue_button"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text"/>

    </LinearLayout>

</FrameLayout>