<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.login.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-350dp"
        android:background="@drawable/background_splach" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="-200dp"
        android:background="@drawable/grade_invers" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/medium_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/large_margin"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/gray"
            android:textSize="@dimen/small_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/medium_padding">

            <TextView
                android:id="@+id/tv_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text"
                android:gravity="center"/>

            <EditText
                android:id="@+id/et_enter_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray"
                android:gravity="start"
                android:hint="@string/type_phone"
                android:inputType="phone"
                android:padding="@dimen/small_padding"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/gray" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/gray"
            android:textSize="@dimen/small_text" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_padding"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_enter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:gravity="start"
                android:hint="@string/type_password"
                android:inputType="textPassword"
                android:padding="@dimen/small_padding"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/gray" />

            <TextView
                android:id="@+id/tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/dark_button"
                android:text="@string/forget"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/blue_button"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="@dimen/medium_text"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/medium_padding"/>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/dark_button"
            android:textSize="@dimen/medium_text"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textAllCaps="false"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>