<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dark_button"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="@dimen/medium_padding"
    android:paddingTop="@dimen/large_padding"
    android:paddingEnd="@dimen/medium_padding"
    android:paddingBottom="@dimen/large_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin"
        android:text="@string/new_order"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/medium_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_desiance" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_padding"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pickup_location"
                android:textColor="@color/gray"
                android:textSize="@dimen/medium_text" />

            <TextView
                android:id="@+id/tv_pickupLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="first location"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/tv_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination_location"
                android:textColor="@color/gray"
                android:textSize="@dimen/medium_text" />

            <TextView
                android:id="@+id/tv_destLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="second location"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_padding"
        android:background="@drawable/blue_button"
        android:text="@string/view"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dark_gray_button"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text" />
</LinearLayout>